# django-direct-cloud-upload

./: LICENSE  MANIFEST.in  README.md  setup.cfg
.github/workflows/: pythonpublish.yml
ddcu/: __init__.py  apps.py  views.py  widgets.py
ddcu/static/ddcu/: cloud_file_widget.css  ddcu_upload.js
ddcu/templates/: cloud_file_widget.html
direct_cloud_upload/: __init__.py  admin.py  apps.py  bucket_registry.py  views.py  widgets.py
direct_cloud_upload/locale/de/LC_MESSAGES/: django.po
direct_cloud_upload/locale/fr/LC_MESSAGES/: django.po
direct_cloud_upload/locale/nl/LC_MESSAGES/: django.po
direct_cloud_upload/static/direct_cloud_upload/: cloud_file_widget.css  ddcu_upload.js
direct_cloud_upload/templates/: cloud_file_widget.html
