[metadata]
name = django-direct-cloud-upload
version = 0.2.4
description = Widget for uploading files from the client directly to a cloud storage bucket.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koendewit/django-direct-cloud-upload
author = Koen De Wit
author_email = koendewit@gmail.com
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.5
install_requires =
    Django>=2.2
    google-cloud-storage>=1.25
include_package_data = true
packages = find: